[workspace]
resolver = "2"
members = ["bevy_htn_macros", "bevy_htn"]

[workspace.package]
version = "0.1.0"
authors = ["Richard Jones <rj@metabrew.com>"]
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Here is a configuration for the most aggressive optimizations possible
# Read this when trying to optimise WASM build: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
bevy_htn_macros = {path = "bevy_htn_macros"}
bevy = {version = "0.15", default-features = false, features = ["bevy_asset"]}
futures-lite = "2.6.0"
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2.0.12"
bevy-inspector-egui = "0.29"
bevy_pancam = {version = "0.16.0", features = ["bevy_egui"]}
bevy_behave = "0.2.1"
rand = "0.9.0"

[patch.crates-io]
bevy_behave = { path = "../bevy_behave" }

