[workspace]
resolver = "2"
members = ["bevy_htn_macros", "bevy_htn"]

[workspace.package]
description = "A bevy hierarchical task network, using bevy_behave trees as operators"
version = "0.0.1"
authors = ["Richard Jones <rj@metabrew.com>"]
repository = "https://github.com/RJ/bevy_htn"
#documentation = "https://docs.rs/bevy_behave"
keywords = ["bevy", "tree", "ai", "game", "htn"]
publish = true
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Here is a configuration for the most aggressive optimizations possible
# Read this when trying to optimise WASM build: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
bevy_htn_macros = "0.0.1"
# TODO: split the Htn asset crate out, so you can use the HTN without file_watcher and multithreaded (wasm)
bevy = {version = "0.15", default-features = false, features = ["bevy_asset", "file_watcher", "multi_threaded"]}
futures-lite = "2.6.0"
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2.0.12"
bevy-inspector-egui = "0.29"
bevy_pancam = {version = "0.16.0", features = ["bevy_egui"]}
bevy_behave = "0.2.2"
rand = "0.9.0"

[patch.crates-io]
bevy_behave = { path = "../bevy_behave" }
bevy_htn_macros = {path = "./bevy_htn_macros"}

