[package]
name = "bevy_htn"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
bevy.workspace = true
futures-lite.workspace = true
pest.workspace = true
pest_derive.workspace = true
thiserror.workspace = true
bevy_htn_macros.workspace = true
bevy_behave.workspace = true
rand.workspace = true

[dev-dependencies]
bevy = {workspace = true, default-features = true}
bevy-inspector-egui.workspace = true
bevy_pancam.workspace = true

[lints.clippy]
type_complexity = "allow"
